# scholar

./: README.md  main.py  pyproject.toml  scholar.py
src/: abstract.py  artical.py  article.py  client.py  config.py  creat_session.py  get_abstract.py  getsci.py  google_scholar.py  google_translator.py  gui.py  main.py  main_gui.py  mainwindow.py  utils.py
