[tool.poetry]
name = "scholar"
version = "0.0.1"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"
bs4 = "^0.0.1"
pydantic = "^1.9.0"
PyQt5 = "^5.15.6"
ptvsd = "^4.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
